# Django-simple-site

./: .gitignore  README.md  pyproject.toml
quotes/app_quotes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
quotes/app_quotes/migrations/: 0001_initial.py
quotes/app_quotes/templates/app_quotes/: add_author.html  add_quote.html  authors.html  base.html  index.html  quotes.html  tags.html
quotes/quotes/: asgi.py  settings.py  urls.py  wsgi.py
quotes/users/: urls.py  views.py
quotes/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html  signup.html
seeds_to_postgres/: authors.json  config.ini  connect.py  models.py  seeds.py
